Closed Bug 1544895 Opened 5 years ago Closed 5 years ago

Bugzilla summary is visible over the persistent header when scrolling down (with non modal bz UI)

Categories

(Core :: Graphics: WebRender, defect, P1)

68 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: mayankleoboy1, Assigned: Gankra)

References

(Regression)

Details

(Keywords: regression)

Attachments

(4 files, 1 obsolete file)

Attached image Capture.PNG

use nightly
enable WR
in your bugzilla preferences, choose the option " use modal user interface" as "off" .
go to https://bugzilla.mozilla.org/show_bug.cgi?id=1544882

scroll down a bit such that the bug summary is visible over the persistent header

AR: the summary is visible over the header
ER: it should be hidden by the header

Summary: Bugzilla summary is visible over the persistent header when scrolling down → Bugzilla summary is visible over the persistent header when scrolling down (with non modal bz UI)
Attached file aboutsupport.txt

I can also see this with the "edit bug" button. I am concerned that this is probably my fault since it goes away if I remove the shadow from that button.

Assignee: nobody → a.beingessner
Blocks: wr-68
Priority: -- → P1
Version: Trunk → 68 Branch
Attached file test-case.html

STR

try which hopefully has the scrollbars in the test-ref because locally testing scrolling on macos is a fool's errand https://treeherder.mozilla.org/#/jobs?repo=try&revision=75a15806586eb919311b705e9530f761a2fa2e61

Regressed by: 1529992
Keywords: regression
Keywords: checkin-needed

Hi, when trying to land this, this error appeared:

We're sorry, Autoland could not rebase your commits for you automatically. Please manually rebase your commits and try again. (255, 'applying /tmp/tmpJRbg7S\npatching file layout/reftests/bugs/reftest.list\nHunk #1 FAILED at 2103\n1 out of 1 hunks FAILED -- saving rejects to file layout/reftests/bugs/reftest.list.rej\nabort: patch failed to apply', '')

Please rebase and set checkin-needed again.

Flags: needinfo?(a.beingessner)
Keywords: checkin-needed

rebased

Flags: needinfo?(a.beingessner)
Keywords: checkin-needed

Pushed by apavel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f1e0b621963c
when suspending ClipLeafMerging, parent to the clip_chain and not the clip. r=kats
https://hg.mozilla.org/integration/autoland/rev/580a7e38c604
revert back to old bad bounds to pick lesser evil for now. r=kats

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Attachment #9059088 - Attachment is obsolete: true
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: