Bug 1544895 - when suspending ClipLeafMerging, parent to the clip_chain and not the clip. r=kats

Differential Revision: https://phabricator.services.mozilla.com/D27819